@@ -75,21 +75,21 @@ module ActiveMerchant #:nodoc:
         super
       end
 
-      def authorize(money, creditcard, options = {})
+      def authorize(money, credit_card_or_reference, options = {})
         post = {}
         add_pair(post, :captureDelay, -1)
         add_amount(post, money, options)
-        add_invoice(post, creditcard, money, options)
-        add_creditcard(post, creditcard)
+        add_invoice(post, credit_card_or_reference, money, options)
+        add_credit_card_or_reference(post, credit_card_or_reference)
         add_customer_data(post, options)
         commit('SALE', post)
       end
 
-      def purchase(money, creditcard, options = {})
+      def purchase(money, credit_card_or_reference, options = {})
         post = {}
         add_amount(post, money, options)
-        add_invoice(post, creditcard, money, options)
-        add_creditcard(post, creditcard)
+        add_invoice(post, credit_card_or_reference, money, options)
+        add_credit_card_or_reference(post, credit_card_or_reference)
         add_customer_data(post, options)
         commit('SALE', post)
       end
@@ -149,20 +149,34 @@ module ActiveMerchant #:nodoc:
         end
       end
 
-      def add_invoice(post, credit_card, money, options)
+      def add_invoice(post, credit_card_or_reference, money, options)
         add_pair(post, :transactionUnique, options[:order_id], :required => true)
         add_pair(post, :orderRef, options[:description] || options[:order_id], :required => true)
-        if ['american_express', 'diners_club'].include?(card_brand(credit_card).to_s)
-          add_pair(post, :item1Quantity, 1)
-          add_pair(post, :item1Description, (options[:description] || options[:order_id]).slice(0, 15))
-          add_pair(post, :item1GrossValue, amount(money))
+        if credit_card_or_reference.respond_to?(:number)
+          if ['american_express', 'diners_club'].include?(card_brand(credit_card_or_reference).to_s)
+            add_pair(post, :item1Quantity, 1)
+            add_pair(post, :item1Description, (options[:description] || options[:order_id]).slice(0, 15))
+            add_pair(post, :item1GrossValue, amount(money))
+          end
         end
 
         add_pair(post, :type, options[:type] || '1')
         add_threeds_required(post, options)
       end
 
-      def add_creditcard(post, credit_card)
+      def add_credit_card_or_reference(post, credit_card_or_reference)
+        if credit_card_or_reference.respond_to?(:number)
+          add_credit_card(post, credit_card_or_reference)
+        else
+          add_reference(post, credit_card_or_reference.to_s)
+        end
+      end
+
+      def add_reference(post, reference)
+        add_pair(post, :xref, reference, :required => true)
+      end
+
+      def add_credit_card(post, credit_card)
         add_pair(post, :customerName, credit_card.name, :required => true)
         add_pair(post, :cardNumber, credit_card.number, :required => true)
 
