@@ -17,6 +17,7 @@
 * Barclaycard Smartpay: Use strict_encode64 [duff]
 * VisaNetPeru: Fix error when billing address empty [shasum]
 * Vanco: Update live_url [duff]
+* Cardstream: Reference purchase [curiousepic]
 
 
 == Version 1.58.0 (March 1, 2016)
